--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vue-admin-template</title>
+    <script type="text/javascript" src="../static/tinymce4.7.5/tinymce.min.js"></script>
+    <title>lexunyoupro</title>
   </head>
   <body>
     <div id="app"></div>
